Adding my penguin projet to scene

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<title>cannnAvar</title>
 </head>
 
 <body>
 	<h1>hello there</h1>
+	<h2>This site is under construction</h2>
+	<h2>My plan is make this website exiting cool website If you reading this now come back later <h1>please</h1>
+	</h2>
+	<br>
+	<br>
+	<p>Check out my 3d <a href="/penguen/pengen.html">penguen page</a>. I made it with 2d canvas. 3d projected on 2d
+		canvas</p>
 </body>
 
 </html>
